--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Socias
 
     </title>
 </head>
 <body>
-    <h1>ola mundo
-        
-    </h1>
+
+<main>
+      <section id="telefone"> 
+
+      </section>
+
+       <section id="redes-sociais">    
+
+       </section>
+
+</main>
+
 </body>
 </html>
